--- a/index.html
+++ b/index.html
@@ -11,40 +11,49 @@
   <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
-  <section class="tasks">
-    <header class="tasks-header">
-      <h2 class="tasks-title">Tasks</h2>
-      <a href="index.html" class="tasks-lists">Lists</a>
-    </header>
-    <fieldset class="tasks-list">
-      <label class="tasks-list-item">
-        <input type="checkbox" name="task_1" value="1" class="tasks-list-cb" checked>
-        <span class="tasks-list-mark"></span>
-        <span class="tasks-list-desc">On your mark</span>
-      </label>
-      <label class="tasks-list-item">
-        <input type="checkbox" name="task_2" value="1" class="tasks-list-cb" checked>
-        <span class="tasks-list-mark"></span>
-        <span class="tasks-list-desc">Get set</span>
-      </label>
-      <label class="tasks-list-item">
-        <input type="checkbox" name="task_3" value="1" class="tasks-list-cb">
-        <span class="tasks-list-mark"></span>
-        <span class="tasks-list-desc">Go!</span>
-      </label>
-    </fieldset>
-  </section>
-
+<div class="container">
+<header>
+  <h1>Програма Концерту. <!--a href="https://dinnad.github.io/skakun1part1link/"-->1 Відділення<!--/a--></h1>
+  <h1><a href="https://dinnad.github.io/skakun1part2link/">Програма Концерту. 2 Відділення</a></h1>
   <div class="about">
     <p class="about-links">
-      <a href="http://www.cssflow.com/snippets/task-list" target="_parent">View Article</a>
-      <a href="http://www.cssflow.com/snippets/task-list.zip" target="_parent">Download</a>
-    </p>
-    <p class="about-author">
-      &copy; 2013 <a href="http://thibaut.me" target="_blank">Thibaut Courouble</a> -
-      <a href="http://www.cssflow.com/mit-license" target="_blank">MIT License</a><br>
-      Original PSD by <a href="http://weboxeur.com/liste-de-taches-psd/" target="_blank">Wassim Bourguiba</a>
+      <a href="http://maxLink" target="_parent">Білети</a><!--add id_plagin_afisha-->
+      <a href="http://maxDownload.zip" target="_parent">Скачати</a><!--add id_plagin_afisha-->
     </p>
   </div>
+</header>
+</div>
+<section class="tasks">
+  <header class="tasks-header">
+    <h2 class="tasks-title">Tasks</h2>
+    <a href="index.html" class="tasks-lists">Lists</a>
+  </header>
+  <fieldset class="tasks-list">
+    <label class="tasks-list-item">
+      <input type="checkbox" name="task_1" value="1" class="tasks-list-cb" checked>
+      <span class="tasks-list-mark"></span>
+      <span class="tasks-list-desc">On your mark</span>
+    </label>
+    <label class="tasks-list-item">
+      <input type="checkbox" name="task_2" value="1" class="tasks-list-cb" checked>
+      <span class="tasks-list-mark"></span>
+      <span class="tasks-list-desc">Get set</span>
+    </label>
+    <label class="tasks-list-item">
+      <input type="checkbox" name="task_3" value="1" class="tasks-list-cb">
+      <span class="tasks-list-mark"></span>
+      <span class="tasks-list-desc">Go!</span>
+    </label>
+  </fieldset>
+</section>
+<section class="centered">
+  <div class="about">
+    <p class="about-author">
+      &copy; 2020 <a href="https://www.facebook.com/helen.skakun" target="_blank">Tickets Here</a> -
+      <a href="http://www.cssflow.com/mit-license" target="_blank">MIT License</a><br>
+      With &hearts; by <a href="https://www.facebook.com/ITvolunteerInnaDanylevska" target="_blank">GretaDanylevska</a>
+    </p>
+  </div>
+</section>
 </body>
 </html>
