--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="about">
     <p class="about-links">
       <a href="http://maxLink" target="_parent">Білети</a><!--add id_plagin_afisha-->
-      <a href="http://maxDownload.zip" target="_parent">Скачати</a><!--add id_plagin_afisha-->
+      <a href="https://dinnad.github.io/skakun1download" target="_parent">Скачати</a><!--a href="http://maxDownload.zip" target="_parent">Скачати</a--><!--add id_plagin_afisha-->
     </p>
   </div>
 </header>
